css/styles.css
/* ... */
@layer components {
  .header__logo {
    font-size: var(--text-md);
    font-weight: 800;

    color: var(--color-text-main);

    letter-spacing: -1.5;
    text-transform: capitalize;

  }

  .header__logo-dot {
    color: var(--color-primary);
  }

  .nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    min-height: 100vh;
    z-index: var(--z-overlay);
    padding: var(--space-md);

    background-color: hsla(var(--h), 10%, 98%, 0.95);
    backdrop-filter: blur(20px);

    display: flex;
    justify-content: center;
    align-items: center;

    opacity: 0;
    visibility: hidden;
    transition: var(--tr-opacity), visibility 0.3s ease-out;
    border-bottom: 1px solid var(--surface-border);
  }

  .nav.is-open {
    opacity: 1;
    visibility: visible;
  }

  .nav.is-open .nav__item {
    opacity: 1;
    transform: translateY(0);
  }

  .nav__list {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--space-md);

    padding: var(--space-md);
  }

  .nav__item {
    opacity: 0;
    transform: translateY(-30px);
    transition: var(--tr-opacity), var(--tr-transform);  
  }

  .nav__link {
    font-size: var(--text-lg);
    font-weight: 700;

    color: var(--color-text-main);
  }

  .nav__link:hover {
      color: var(--color-primary);
    }


  .nav.is-open .nav__item:nth-child(1) { 
    transition-delay: 0.05s;
   }
   .nav.is-open .nav__item:nth-child(2) { 
    transition-delay: 0.25s;
   }
   .nav.is-open .nav__item:nth-child(3) { 
    transition-delay: 0.40s;
   }
   .nav.is-open .nav__item:nth-child(4) { 
    transition-delay: 0.55s;
   }
   .nav.is-open .nav__item:nth-child(5) { 
    transition-delay: 0.70s;
   }

   
  
  .toggle__grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 3px;
    width: 24px;
  }

  .toggle__grid span {
    width: 5px;
    height: 5px;
    background-color: var(--color-primary);
    border-radius: var(--radius-round);
    transition: var(--tr-bg);
  }

  .header__toggle {
    width: 44px;
    height: 44px;

    display: grid;
    place-items: center;

    transition: var(--tr-transform);


     &:active {
      transform: scale(0.9);
    }

    &:hover .toggle__grid span {
      transition: transform var(--ms-instant) ease-out;
    }

    &:hover .toggle__grid span:nth-child(even) {
      transform: scale(1.2);
      background-color: var(--color-accent);
    }
   
  }

  .nav__close {
    font-size: var(--text-lg);
    font-weight: 500;
    position: absolute;
    top: var(--space-md);
    right: var(--space-md);

    width: calc(var(--size-xs) * 0.2);

    border: 1px solid var(--surface-border);
    background-color: var(--surface-bg);
    color: var(--color-accent);

    cursor: pointer;

    display: grid;
    place-items: center;
  }

  .section__title {
    font-size: var(--text-lg);
    color: var(--color-primary);
    margin-bottom: var(--space-md);
    display: inline-block;
    position: relative;

    &::after {
      content: "";
      position: absolute;
      left: 0;
      bottom: -6px;
      width: 2.5rem;
      height: 4px;
      background-color: var(--color-primary);
      border-radius: var(--radius-round);

      transition: width var(--ms-smooth) ease-out;
    }

    &:hover::after {
      width: 100%;
    }

  }

  .hero__img {
    width: clamp(150px, 40vw, 250px);
    aspect-ratio: 1 / 1;
    object-fit: cover;

    border-radius: var(--radius-round);
    border: 4px solid var(--surface-border);
    box-shadow: var(--shadow2);
  }

  .catalyst {
    background-color: var(--color-surface);
    border: 1px solid var(--surface-border);
    padding: var(--space-lg);
    border-radius: var(--radius-lg);
    box-shadow: var(--shadow1);

    display: flex;
    flex-direction: column;
    gap: var(--space-md);
  }

  .catalyst__title {
    font-size: var(--text-md);
    color: var(--color-text-main);
    line-height: 1.3;
  }

  .catalyst__img {
    border-radius: var(--radius-md);
    width: 100%;
    max-width: 200px;
    margin-inline: auto;
    box-shadow: var(--shadow-2);
  }

  .skill-card {
    background-color: var(--color-surface);
    border: 1px solid var(--surface-border);
    padding: var(--space-lg);
    border-radius: var(--radius-md);
    box-shadow: var(--shadow-1);

    transition: var(--tr-shadow), var(--tr-transform);
    height: fit-content;

    &:hover {
      transform: translateY(-4px);
      box-shadow: var(--shadow-2);
    }
  }

  .skill-card__title {
    font-size: var(--text-md);
    color: var(--color-primary);
    margin-bottom: var(--space-md);
    border-bottom: 2px solid var(--primary-light);
    padding-bottom: var(--space-xs);
  }

  .skill-card__item {
    font-size: var(--text-base);
    color: var(--color-text-main);
    padding-block: var(--space-xs);

    display: flex;
    align-items: center;
    gap: var(--space-xs);
  }

.certs__carousel {
  overflow-x: auto;
  overflow-y: hidden;

  scroll-snap-type: x mandatory;
}

.certs__track {
  display: flex;
}

.cert-card {
  flex: 0 0 auto;
  width: 100%;
  scroll-snap-align: start;

  margin-inline-end: var(--space-md);
  
}
 
}



             

